--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,7 +11,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/idPosts"/>
+        android:id="@+id/idPosts"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"/>
 
     <ProgressBar
         android:layout_width="wrap_content"
